--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "dependencies": {
+    "@babel/preset-env": "^7.1.6",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "expo": "^43.0.0",
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.1.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "yup": "^0.32.11"
   },
