--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@react-navigation/stack": "^6.0.11",
     "email-validator": "^2.0.4",
     "expo": "^43.0.0",
+    "firebase": "^9.6.1",
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
